--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ pillow = "^11.3.0"
 pyqtgraph = "^0.13.7"
 qt-material = "^2.17"
 numpy = "^2.3.1"
+scipy = "^1.16.0"
+pytest-qt = "^4.5.0"
+punq = "^0.7.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
